<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task.screens.DetailsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".task.screens.DetailsActivity">



        <TextView
            android:id="@+id/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/details_title"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namelayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/NameHint"
            android:padding="5dp"
            app:boxStrokeColor="@color/red"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Heading">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/maillayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:hint="@string/HintEmail"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:boxStrokeColor="@color/red"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/mail"
            app:layout_constraintTop_toBottomOf="@+id/namelayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:hint="@string/HintContact"
            android:inputType="textPersonName"
            android:padding="1dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:boxStrokeColor="@color/red"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/ic_contact"
            app:layout_constraintTop_toBottomOf="@+id/maillayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Doblayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:hint="@string/hintdob"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:boxStrokeColor="@color/red"
            app:endIconMode="custom"
            app:startIconDrawable="@drawable/ic_date"
            app:layout_constraintTop_toBottomOf="@+id/contactLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passworLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:hint="@string/passwordhint"
            android:inputType="textPersonName"
            android:padding="1dp"
            app:boxStrokeColor="@color/red"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/Doblayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="16"
                android:maxLines="1"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Confirmplayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:hint="@string/ConPasswordHint"
            android:inputType="textPersonName"
            android:padding="1dp"
            app:boxStrokeColor="@color/red"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/passworLayout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="16"
                android:maxLines="1"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/tvGenderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/gendertitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/Confirmplayout"
            app:layout_constraintTop_toBottomOf="@+id/Confirmplayout"
             />


   <RadioGroup
       android:id="@+id/rgRadioGroup"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintStart_toStartOf="@+id/tvGenderTitle"
       app:layout_constraintTop_toBottomOf="@+id/tvGenderTitle"
       >
       <RadioButton
           android:id="@+id/cbMale"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/checkmale"
          />
       <RadioButton
           android:id="@+id/cbFemale"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="15dp"
           android:text="@string/checkFemale"
            />
   </RadioGroup>
        <TextView
            android:id="@+id/tvHealthview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/hobiesTitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/rgRadioGroup"
            app:layout_constraintTop_toBottomOf="@id/rgRadioGroup" />

        <CheckBox
            android:id="@+id/cbChess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chessCheckBox"
            app:layout_constraintStart_toStartOf="@id/tvHealthview"
            app:layout_constraintTop_toBottomOf="@id/tvHealthview"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_marginEnd="8dp" />

        <CheckBox
            android:id="@+id/cbcook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cookCheckBox"
            app:layout_constraintStart_toEndOf="@id/cbChess"
            app:layout_constraintTop_toTopOf="@id/cbChess"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <CheckBox
            android:id="@+id/cbTravel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travelCheckBox"
            app:layout_constraintStart_toEndOf="@id/cbcook"
            app:layout_constraintTop_toTopOf="@id/cbcook"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <CheckBox
            android:id="@+id/cbDance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DanceCheckBox"
            app:layout_constraintStart_toEndOf="@id/cbTravel"
            app:layout_constraintTop_toTopOf="@id/cbTravel"
            android:layout_marginStart="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtSbmtButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#2D9106"
            android:text="@string/SubmitTitle"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbChess"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>