<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".healthform.healform_ui">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Title"
        android:textColor="#D70505"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernaemlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:hint="Enter name"
        android:padding="5dp"
        app:boxStrokeColor="#F70303"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UserNameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usersurlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="@string/HintSurName"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:boxStrokeColor="#F70303"

        app:layout_constraintTop_toBottomOf="@+id/usernaemlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UserSurNameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usermaillayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="@string/HintEmail"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:boxStrokeColor="#F70303"

        app:layout_constraintTop_toBottomOf="@+id/usersurlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UserSurEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernumberlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="Number"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:boxStrokeColor="#F70303"
        app:layout_constraintTop_toBottomOf="@+id/usermaillayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UserContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UserDoblayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="DOB"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:boxStrokeColor="#F70303"
        app:layout_constraintTop_toBottomOf="@+id/usernumberlayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UserDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/GenderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner_radius"
        android:padding="4dp"
        android:text="@string/genderTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/usernaemlayout"
        app:layout_constraintTop_toBottomOf="@id/UserDoblayout" />

    <CheckBox
        android:id="@+id/checkBoxM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="MAle"
        app:layout_constraintStart_toStartOf="@id/GenderView"
        app:layout_constraintTop_toBottomOf="@id/GenderView" />

    <CheckBox
        android:id="@+id/checkBoxF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Female"
        app:layout_constraintStart_toEndOf="@id/checkBoxM"
        app:layout_constraintTop_toTopOf="@id/checkBoxM" />

    <TextView
        android:id="@+id/Healthview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/corner_radius"
        android:padding="4dp"
        android:text="@string/HealthTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/GenderView"
        app:layout_constraintTop_toBottomOf="@id/checkBoxM" />

    <CheckBox
        android:id="@+id/checkBoxFever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fever"
        app:layout_constraintStart_toStartOf="@id/Healthview"
        app:layout_constraintTop_toBottomOf="@id/Healthview" />

    <CheckBox
        android:id="@+id/checkBoxMaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Maleria"
        app:layout_constraintStart_toEndOf="@id/checkBoxFever"
        app:layout_constraintTop_toBottomOf="@id/Healthview" />

    <CheckBox
        android:id="@+id/checkBoxother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="Other"
        app:layout_constraintStart_toEndOf="@id/checkBoxMaleria"
        app:layout_constraintTop_toBottomOf="@id/Healthview" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2D9106"
        android:text="@string/SubmitTitle"
        app:layout_constraintEnd_toStartOf="@id/ResetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxFever" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2D9106"
        android:text="@string/ResetTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SubmitButton"
        app:layout_constraintTop_toTopOf="@id/SubmitButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

